--- a/styles.css
+++ b/styles.css
@@ -333,21 +333,25 @@ nav {
 
   .contact {
     background-color: var(--main-brown);
-    display:flex;flex-wrap: wrap;
-    justify-content: space-around;
-    align-items:center;
-    width:100%;
+    display:flex;
+    flex-wrap: wrap;
     height:100vh;
   }
   .social {
-    display: flex; flex-direction: column; justify-content: center;align-items: center;padding: 0 0.5rem;
+    flex:1 1 150px;display: flex; flex-direction: column; justify-content: center;align-items: center;
+    max-width: 100%;height: auto;
+    flex-wrap: wrap;
   }
   .profile-link {
     display: flex; flex-direction: column; justify-content: center;align-items: center;
+    font-size: 1em;
   }
   .icons {
     display: block;
-    width: 50px;
+    width: 100%;
+  }
+  .codeCademy {
+    color: white !important;
   }
   #email {
     font-size: 1em;
